--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,19 @@
-<canvas id="canvas"></canvas>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>送给我的宝</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+
+<body>
+  <!-- partial:index.partial.html -->
+  <canvas id="canvas"></canvas>
+  <!-- partial -->
+  <script src="./script.babel"></script>
+
+</body>
+
+</html>
